# HPC_Introduction_with_LBM

./: .gitignore  LICENSE  README.md
arrayfire/ldc_2D/: CMakeLists.txt  ldc2d.cu
arrayfire/ldc_2D/src/: ldc2d_af.cu
arrayfire/lin_advec/: CMakeLists.txt  lax.cpp  maccormack.cpp  rusanov.cpp
cuda/hello/: hello  hello.cu
matlab/3D channel/: D3Q19_RegBC_LBGK.cu  D3Q19_RegBC_LBGK_turb.cu  D3Q19_RegBC_LBGK_turb.mexa64  bounceBackD2Q9.cu  calcFeqD2Q9.cu  circ_obst3D.m  circ_obst3D_cuda0.m  circ_obst3D_cuda3.m  load_restart_data.m  matlab-gpu.slurm  oblate_spheroid_cuda.m  oblate_spheroid_cuda_batch.m  streamLBM.cu  streamLBM.ptx  writeXdmf_dp.m
matlab/3D_channel/: D3Q19_RegBC_LBGK.mexa64  D3Q19_RegBC_LBGK_turb.mexa64  bounceBackD3Q19.cu  bounceBackD3Q19.ptx  calcFeqD3Q19.cu  calcFeqD3Q19.ptx  circ_obst3D_cuda0.m  circ_obst3D_cuda1.m  circ_obst3D_cuda2.m  circ_obst3D_cuda3.m  circ_obst3D_cuda4.m  circ_obst3D_h5out_test.m  matlab-LBM-gpu-koehr.pbs  matlab-LBM-gpu-mustang.pbs  matlab-LBM-gpu-narwhal.pbs  oblate_spheroid_cuda.m  oblate_spheroid_cuda_batch.m  pois3D.m  run_wmb_koehr.pbs  wall_mounted_brick_cuda.m  wmb_cuda_batch.m  writeXdmf_dp.m  write_restart_data.m
matlab/Demo_Jan20_2012/: backward_step_2D.m  circ_obst_2D_altBC.m  ldc_3D_cuda_v0.m  pois_2D_altBC.m
matlab/advec_1D_FDM/: lax_mex.cu  lax_mex.mexa64  lax_update.cu  lax_update.ptx  maccormack_update.cu  maccormack_update.ptx  moving_wave_vectorized_MacCormack.m  moving_wave_vectorized_MacCormack_cuda1.m  moving_wave_vectorized_lax.m  moving_wave_vectorized_lax_cuda1.m  moving_wave_vectorized_lax_cuda2.m  moving_wave_vectorized_lax_mexcuda.m  moving_wave_vectorized_lax_test.m  moving_wave_vectorized_rusanov.m  moving_wave_vectorized_rusanov_cuda1.m  moving_wave_vectorized_rusanov_cuda2.m  rusanov_update_p1.cu  (+3 more)
mpi_with_cuda/: CMakeLists.txt  Readme.md
mpi_with_cuda/include/: CudaPart.h
mpi_with_cuda/src/: CudaPart.cu  hello.C
(+56 files in other folders)
